--- a/03_capitulo.qmd
+++ b/03_capitulo.qmd
@@ -1,4 +1,4 @@
-# A Metodologia CRISP-DM
+# A Metodologia CRISP-DM {#sec-crispdm}
 
 Este capítulo apresenta a metodologia CRISP-DM (*Cross-Industry Standard
 Process for Data Mining*) [@ibm_crisp_dm], amplamente utilizada para estruturar
