--- a/referencias.bib
+++ b/referencias.bib
@@ -89,6 +89,16 @@
 }
 
 
+@misc{hbr2012_bigdata,
+  title        = {Big Data: The Management Revolution},
+  author       = {{Harvard Business Review}},
+  year         = {2012},
+  month        = oct,
+  url          = {https://hbr.org/2012/10/big-data-the-management-revolution},
+  urldate      = {2026-01-20}
+}
+
+
 @misc{economist2017,
   title        = {The World's Most Valuable Resource},
   author       = {{The Economist}},
